devops/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/floriandulzky/memory-snap-frontend:1.0.0
          ports:
          - containerPort: 80
      imagePullSecrets:
        - name: ghcr-secret
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/floriandulzky/memory-snap-backend:1.0.0
          ports:
          - containerPort: 1909
      imagePullSecrets:
        - name: ghcr-secret
      restartPolicy: Always
